--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Happy Birthday Vijju</title>
 
+<!-- FONT -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+
+<style>
+/* RESET */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  background: radial-gradient(circle at center, #111 0%, #000 70%);
+  font-family: 'Inter', sans-serif;
+  color: #f5f5f5;
+  overflow: hidden;
+  position: relative;
+}
+
+/* SUBTLE LIGHT DEPTH */
+body::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle at right, rgba(255,255,255,0.06), transparent 60%);
+  pointer-events: none;
+}
+
+/* HERO SECTION */
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+  padding: 0 8%;
+  position: relative;
+  z-index: 1;
+}
+
+/* TEXT */
+.text {
+  max-width: 500px;
+}
+
+.label {
+  font-size: 12px;
+  letter-spacing: 3px;
+  opacity: 0.6;
+}
+
+.text h1 {
+  font-size: 52px;
+  font-weight: 700;
+  margin: 20px 0;
+  line-height: 1.15;
+}
+
+.text p {
+  font-size: 18px;
+  font-weight: 300;
+  opacity: 0.75;
+}
+
+/* MOON */
+.moon img {
+  width: 480px;
+  object-fit: contain;
+  filter:
+    brightness(0.95)
+    contrast(1.05)
+    drop-shadow(0 0 60px rgba(255,255,255,0.18));
+  animation: float 10s ease-in-out infinite;
+}
+
+/* FLOATING EFFECT */
+@keyframes float {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-20px); }
+  100% { transform: translateY(0); }
+}
+
+/* RESPONSIVE */
+@media (max-width: 900px) {
+  .hero {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .moon img {
+    width: 300px;
+    margin-top: 40px;
+  }
+
+  .text h1 {
+    font-size: 40px;
+  }
+}
+</style>
+</head>
+
+<body>
+
+<section class="hero">
+  <div class="text">
+    <span class="label">SATELLITE</span>
+    <h1>Happy Birthday<br>Vijjuluuuuuuu 🤍</h1>
+    <p>You are my moon in every dark night.</p>
+  </div>
+
+  <div class="moon">
+    <img src="assets/moon.png" alt="Moon">
+  </div>
+</section>
+
+<script>
+/* PREMIUM PARALLAX */
+document.addEventListener("mousemove", (e) => {
+  const moon = document.querySelector(".moon img");
+  const x = (e.clientX / window.innerWidth - 0.5) * 15;
+  const y = (e.clientY / window.innerHeight - 0.5) * 15;
+  moon.style.transform = `translate(${x}px, ${y}px)`;
+});
+</script>
+
+</body>
+</html>
